--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -251,7 +251,7 @@
         CEO James Smith: TR stabilised, its credibility restored
     </div>
     <div class="a-body">
-        <img class="imageStyle" src="http://www.thebaron.info/news/files/screen-shot-2013-04-20-at-19.37.20.png" width="233" height="233" />
+        <img class="imageStyle" src="http://www.thebaron.info/news/files/screen-shot-2013-04-20-at-19.37.20.png" width="60%" />
         <p>Thomson Reuters chief executive </p>
 
         <p>James Smith, pictured, said on Tuesday the business had been stabilised and credibility restored since he took over in January 2012 and the company is now ready to turn the page to the next chapter of its evolution.<br /></p>
@@ -643,7 +643,7 @@
         <p>
         Thomson Reuters is to shift focus from acquisition activity to organic growth, according to an internal account of chief executive James Smith’s recent meetings with regional managers.</p>
 
-        <img src="http://www.thebaron.info/news/files/screen-shot-2012-11-02-at-12.01.07.png" width="191" height="188" />
+        <img src="http://www.thebaron.info/news/files/screen-shot-2012-11-02-at-12.01.07.png" width="40%" height="188" />
         <p>
         “Putting customers first, delivering the solutions they need most and going to market as a unified enterprise: that’s how Thomson Reuters Chief Executive Officer (CEO) Jim Smith envisions the next generation of our business,” said a message posted on the Hub internal communications system following meetings in Buenos Aires and São Paulo earlier this month.</p>
 
@@ -698,7 +698,7 @@
         JOB CUTS: 'DIFFICULT EARLY STEPS' - CEO JAMES SMITH
     </div>
     <div class="a-body">
-        <img src="http://www.thebaron.info/news/files/screen-shot-2013-05-29-at-14.23.47.png" width="464" height="88" />
+        <img src="http://www.thebaron.info/news/files/screen-shot-2013-05-29-at-14.23.47.png" width="98%" height="88" />
 
         <p>Thomson Reuters CEO </p>
 
@@ -1144,7 +1144,7 @@
     </div>
     <div class="a-body">
         <p>Andrew Rashbass to leave publisher after 15 years, having led digital transformation from print to digital business</p>
-        <img src="http://static.guim.co.uk/sys-images/Media/Pix/pictures/2013/5/29/1369829289286/Andrew-Rashbass-008.jpg" width="460" height="276"/>
+        <img src="http://static.guim.co.uk/sys-images/Media/Pix/pictures/2013/5/29/1369829289286/Andrew-Rashbass-008.jpg" width="98%" height="276"/>
         <p>Andrew Rashbass: the Economist Group chief is to head Thomson Reuters' news agency and media business. Photograph: Graham Turner for the Guardian</p>
 
         <p>Andrew Rashbass, the chief executive of the Economist Group, is to join Thomson Reuters to take the newly-created role of chief executive of the Reuters news agency and media arm.</p>
@@ -1544,7 +1544,7 @@
     <div class="a-body">
         <p> Reuters plans a fresh review of the company's business units, in the latest sign the data provider is looking for ways to respond to weak demand from its financial services clients.</p> <p>In a video emailed to staff on Tuesday, Thomson Reuters Chief Executive  Jim Smith announced the review, to be led by  Neil Masterson, a longtime executive appointed to the new role of &quot;chief transformation officer&quot; within the company.</p> 
 
-        <img src="http://s.wsj.net/public/resources/images/MK-CG738_REUTER_G_20131001193440.jpg" alt="cat" width="553" height="369" >
+        <img src="http://s.wsj.net/public/resources/images/MK-CG738_REUTER_G_20131001193440.jpg" alt="cat" width="98%">
 
         <p>&quot;We need to better align resources behind our most promising growth opportunities.... We need to attack internal bureaucracy once and for all,&quot; Mr. Smith said on the video, warning that process will require Thomson Reuters to &quot;make many tough decisions.&quot;</p> 
 
