--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -64,6 +64,19 @@
         <span class="title">Articles</span>
     </div>
     <ul id="articleList" data-role="listview" data-divider-theme="b" class="list">
+        <li data-theme="c" class="vi-bullet">
+            <a href="#v1" data-transition="slide" onclick="playSelectedVideo('video1')">
+                <div class="source">Youtube</div><br/>
+                <div class="ar-title">Interview With President & CEO Jim Smith</div>
+            </a>
+        </li>
+        <li data-theme="c" class="vi-bullet">
+            <a href="#v2" data-transition="slide" onclick="playSelectedVideo('video2')">
+                <div class="source">Youtube</div><br/>
+                <div class="ar-title">Thomson Reuters 2012 Corporate Responsibility Report</div>
+            </a>
+        </li>
+
         <li data-theme="c" class="ar-bullet">
             <a href="#a16" data-transition="slide">
                 <div class="source">Start Ribune Business</div><div class="ar-date">Dec 10, 2013</div><br/>
@@ -231,11 +244,28 @@
     </a>
     <img class="gb-ct-img" src="img/JamesCSmith.png" alt="image"/>
     <div class="d-title">
-        Cardinal Health's Chairman & CEO George Barrett on Board Leadership
+        Interview With President & CEO Jim Smith
     </div>
     <div class="a-body">
-        <video id="video1" style="width:300px" controls>
-            <source src="http://54.215.134.149:8080/file/getFile/g1.mp4" type="video/mp4">
+        <video id="video1" style="width:98%" controls>
+            <source src="https://s3-us-west-2.amazonaws.com/fptusa/James+Smith/Interview+With+President+&+CEO+Jim+Smith.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+</div>
+
+<!--v2-->
+<div data-role="page" id="v2">
+    <a class="back arrow" href='#articles' data-transition="slide" onclick="stopCurrentVideo();">
+        Back
+    </a>
+    <img class="gb-ct-img" src="img/JamesCSmith.png" alt="image"/>
+    <div class="d-title">
+        Thomson Reuters 2012 Corporate Responsibility Report
+    </div>
+    <div class="a-body">
+        <video id="video2" style="width:98%" controls>
+            <source src="https://s3-us-west-2.amazonaws.com/fptusa/James+Smith/Thomson+Reuters+2012+Corporate+Responsibility+Report.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -1789,7 +1819,7 @@
     function getTweets() {
         $("#tweetList").html("");
         $("#loader").css("visibility","visible");
-        var twitterAPI = "http://54.215.134.149:8080/data/getdata?type=SearchTweets&q='ThomsonReuters'";
+        var twitterAPI = "http://54.201.207.238:8080/data/getdata?type=SearchTweets&q='ThomsonReuters'";
         $.getJSON( twitterAPI, {
             format: "json"
         }).done(function( data ) {
