--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -64,19 +64,6 @@
         <span class="title">Articles</span>
     </div>
     <ul id="articleList" data-role="listview" data-divider-theme="b" class="list">
-        <li data-theme="c" class="vi-bullet">
-            <a href="#v1" data-transition="slide" onclick="playSelectedVideo('video1')">
-                <div class="source">Youtube</div><br/>
-                <div class="ar-title">Interview With President & CEO Jim Smith</div>
-            </a>
-        </li>
-        <li data-theme="c" class="vi-bullet">
-            <a href="#v2" data-transition="slide" onclick="playSelectedVideo('video2')">
-                <div class="source">Youtube</div><br/>
-                <div class="ar-title">Thomson Reuters 2012 Corporate Responsibility Report</div>
-            </a>
-        </li>
-
         <li data-theme="c" class="ar-bullet">
             <a href="#a16" data-transition="slide">
                 <div class="source">Start Ribune Business</div><div class="ar-date">Dec 10, 2013</div><br/>
@@ -183,6 +170,18 @@
             <a href="#a5" data-transition="slide">
                 <div class="source">Thomson Reuters</div><div class="ar-date">Apr 16, 2013</div><br/>
                 <div class="ar-title">James C. Smith, Thomson Reuters CEO and Marshall grad, to deliver commencement speech to undergraduates May 11</div>
+            </a>
+        </li>
+        <li data-theme="c" class="vi-bullet">
+            <a href="#v2" data-transition="slide" onclick="playSelectedVideo('video2')">
+                <div class="source">Youtube</div><div class="ar-date">May 13, 2013</div><br/>
+                <div class="ar-title">Thomson Reuters 2012 Corporate Responsibility Report</div>
+            </a>
+        </li>
+        <li data-theme="c" class="vi-bullet">
+            <a href="#v1" data-transition="slide" onclick="playSelectedVideo('video1')">
+                <div class="source">Youtube</div><div class="ar-date">Apr 2, 2012</div><br/>
+                <div class="ar-title">Interview With President & CEO Jim Smith</div>
             </a>
         </li>
         <li data-theme="c" class="ar-bullet">
