--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -245,7 +245,7 @@
     <div class="d-title">
         Interview With President & CEO Jim Smith
     </div>
-    <div class="a-body">
+    <div class="v-body">
         <video id="video1" style="width:98%" controls>
             <source src="https://s3-us-west-2.amazonaws.com/fptusa/James+Smith/Interview+With+President+&+CEO+Jim+Smith.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -262,7 +262,7 @@
     <div class="d-title">
         Thomson Reuters 2012 Corporate Responsibility Report
     </div>
-    <div class="a-body">
+    <div class="v-body">
         <video id="video2" style="width:98%" controls>
             <source src="https://s3-us-west-2.amazonaws.com/fptusa/James+Smith/Thomson+Reuters+2012+Corporate+Responsibility+Report.mp4" type="video/mp4">
             Your browser does not support the video tag.
